[gd_scene load_steps=4 format=3 uid="uid://1mfjv5e7n15c"]

[ext_resource type="Theme" uid="uid://c1381xujec7ub" path="res://scenes/ui/game_ui_theme.tres" id="1_mkoh3"]
[ext_resource type="Script" uid="uid://bngq0sb3f4nsi" path="res://scenes/ui/pause/pause_settings.gd" id="2_rmu6v"]
[ext_resource type="PackedScene" uid="uid://brofunsiuos61" path="res://scenes/ui/pause/settings/discord_settings.tscn" id="3_lrvts"]

[node name="PauseSettings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mkoh3")
script = ExtResource("2_rmu6v")
discord_settings = ExtResource("3_lrvts")

[node name="Settings" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"TinyTextButton"
text = "Back"

[node name="DiscordButton" type="Button" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"TinyTextButton"
text = "Discord Activity"

[node name="Variables" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/DiscordButton" to="." method="_on_discord_button_pressed"]
